[package]
name = "echo-dialer"
version = "0.1.0"
authors = ["Eugene Chupriyanov <tchu@tchu.ru>"]

[dependencies]
bytes = "0.4.10"
futures = "0.1.23"
tokio-codec = "0.1.0"
tokio-io = "0.1.8"
bigint = "4.4.1"
env_logger = "0.5.13"
rand = "0.5.5"
structopt =  "0.2.10"
tokio-current-thread = "0.1.1"
tokio-stdin = "0.1.1"
tokio-timer = "0.2.6"
tokio = "0.1.8"
libp2p = { git = "https://github.com/libp2p/rust-libp2p" }
# libp2p = { path = "../../dev/rust-libp2p" }
