[package]
name = "echo-server"
version = "0.1.0"
authors = ["Eugene Chupriyanov <tchu@tchu.ru>"]

[dependencies]
bytes = "0.4"
futures = "0.1"
tokio-codec = "0.1"
tokio-io = "0.1"
bigint = "4.4.1"
env_logger = "0.5.13"
rand = "0.4"
structopt =  "0.2"
tokio-current-thread = "0.1"
tokio-stdin = "0.1"
tokio-timer = "0.2.6"
tokio = "0.1"
libp2p = { git = "https://github.com/libp2p/rust-libp2p" }
# libp2p = { path = "../../dev/rust-libp2p" }
